(library
 (name codept_m2l_tests)
 (inline_tests)
 (libraries
  codept_m2l
  dune_sexp
  dune_tests_common
  stdune
  unix
  ;; This is because of the (implicit_transitive_deps false)
  ;; in dune-project
  ppx_expect.config
  ppx_expect.config_types
  base
  ppx_inline_test.config)
 (preprocess
  (pps ppx_expect)))
