(library
 (name dune_daemon_tests)
 (modules dune_daemon_tests)
 (inline_tests)
 (libraries
  dune_daemon
  dune_engine
  dune_scheduler
  dune_rpc_impl
  dune_rpc_client
  dune_rpc_private
  dune_util
  stdune
  fiber
  spawn
  unix
  ;; This is because of the (implicit_transitive_deps false)
  ;; in dune-project
  ppx_expect.config
  ppx_expect.config_types
  base
  ppx_inline_test.config)
 (preprocess
  (pps ppx_expect)))
